# MULTI_PROCESS_DEMON

./: CMakeLists.txt  DESCRIPTION.TXT  README.md
src/: AServerDemon.cpp  CLIENTS_START.sh  PROCESS_LIST.sh  RUN.sh  SClient.cpp  SLAY.sh
src/CLIENT_FILES/: Opera_scripts.rtf  infile_1.txt
